# vserver

./: .env.txt  Dockerfile
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
vserver/: data.json  pyproject.toml
vserver/alembic/: env.py
vserver/alembic/versions/: a46ed9682cc1_.py
vserver/vserver/: config.py  main.py  worker.py
vserver/vserver/api/: deps.py
vserver/vserver/api/v1/: api.py
vserver/vserver/api/v1/endpoints/: browse.py  videos.py
vserver/vserver/core/: celery_app.py
vserver/vserver/db/: base.py  session.py
vserver/vserver/models/: base.py  video.py
vserver/vserver/schemas/: base.py  video.py
vserver/vserver/services/: __init__.py  base.py  video.py
